New Depsgraph break Modifiers animatability #45633

Closed
opened 2015-07-31 21:36:42 +02:00 by Philip Plescher · 6 comments

System Information

Xubuntu 15.04; GeForce GTX 780 Ti

Blender Version

Broken: Blender 2.75 6b7313b (enabled New Dependency Graph)
Work: Blender 2.75 6b7313b (old Dependency Graph)

Short description of error

Any animation in the Modifiers are ignored, if the new dependency graph is anabled.

Exact steps for others to reproduce the error

Load the example File from the attachement one time in Blender with new dependency graph enabled and press Play in the Timeline. Nothing will happen in the 3DView.
Load the example in Blender with old dependency graph and play the animation. The Modifiers work like expected in the 3DView.

Thank you for investigation.

Philip

NewDepgraph_ModAnimBroken.blend

**System Information** Xubuntu 15.04; GeForce GTX 780 Ti **Blender Version** Broken: Blender 2.75 6b7313b (enabled New Dependency Graph) Work: Blender 2.75 6b7313b (old Dependency Graph) **Short description of error** Any animation in the Modifiers are ignored, if the new dependency graph is anabled. **Exact steps for others to reproduce the error** Load the example File from the attachement one time in Blender with new dependency graph enabled and press Play in the Timeline. Nothing will happen in the 3DView. Load the example in Blender with old dependency graph and play the animation. The Modifiers work like expected in the 3DView. Thank you for investigation. Philip [NewDepgraph_ModAnimBroken.blend](https://archive.blender.org/developer/F216514/NewDepgraph_ModAnimBroken.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @qpblendpolis

Added subscriber: @qpblendpolis

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This issue was referenced by b88d8916e4

This issue was referenced by b88d8916e44f998c4f0bc397b29b0d6ff0f011e9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Kotau ....

qp

Kotau .... qp
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45633
No description provided.